--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -1,75 +1,106 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/style.CSS">
-        <script src="../JavaScript/Script.js"></script>
-        <title>Project E-Commerce</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <nav id="menu">
-            <a href="#"><img src="../midia/logo.png"></a>
-            <div id="item1">
-                <p id="osf">OSF</p>
-                <p id="academy">academy</p>
-            </div>
-            <ul>
-                <button id="dropdown"><a class="options" href="#">Services</a>
-                    <div id="dropcontent">
-                        <div class="colunav">
-                            <h1>PRODUCT CATEGORIES</h1>
-                            <a>Accessories</a>
-                            <a>Alcohol</a>
-                            <a>Art</a>
-                            <a>Books</a>
-                            <a>Drink</a> 
-                            <a>Electronics</a> 
-                            <a>Flowers & Plant</a>
-                            <a>Gadgets</a> 
-                            <a>Garden</a>
-                            <a>Grocery</a>
-                            <a>Home</a>
-                            <a>Jewelry</a>
-                            <a>Kids & Baby</a> 
-                            <a>Men's Fashion</a>
-                            <a>Mobile</a>
-                            <a>Motorcycles</a>
-                            <a>Movies</a>
-                            <a>Music</a>
-                            <a>Office</a>
-                            <a>Pets</a>
-                            <a>Romantic</a>
-                            <a>Sport</a>
-                            <a>Toys</a>
-                            <a>Travel</a>
-                        </div>
-                        <div class="colunav">
-                            <h1>SALE</h1>
-                            <a>Accessories</a>
-                            <a>Alcohol</a>
-                            <a>Art</a>
-                            <a>Books</a>
-                            <a>Drink</a> 
-                            <a>Electronics</a> 
-                            <a>Flowers & Plant</a>                            
-                        </div>
-                        <img src="../midia/minaoculos.png" alt="Girl using sunglasses">
-                    </div>   
-                </button>
-                <button><a class="options" href="#">Company</a></button>
-                <button><a class="options" href="#">Library</a></button>
-                <button><a class="options" href="#">Contact Us</a></button>
-            </ul>
-            <a id="item6" href="#" class="icons"><img src="../midia/search.png"></a>
-            <a href="#" class="icons"><img src="../midia/user.png"></a>
-            <a href="#" class="icons"><img src="../midia/heart.png"></a>
-            <a href="#" class="icons"><img src="../midia/bag.png"></a>
-        </nav>  
-        
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/style.CSS">
+    <title>E-commerce Project</title>
+  </head>
+  <body>
+    <!--NAVIGATION BAR-->
+    <nav class="navbar navbar-expand-lg navbar-light ">
+      <div class="container-fluid">
+        <div>
+          <a class="navbar-brand" href="#">
+            <img src="../midia/logo.png" class="d-inline-block">
+            OSF
+          </a>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Features
+              </a>
+              <div class="dropdown-menu dropdown-multicol2 p-3 mb-2" aria-labelledby="dropdownMenuButton">
+                <div class="dropdown-col">
+                  <h3>PRODUCT CATEGORIES</h3>
+                  <a class="dropdown-item" href="#">Accessories</a>
+                  <a class="dropdown-item" href="#">Alcohol</a>
+                  <a class="dropdown-item" href="#">Art</a>
+                  <a class="dropdown-item" href="#">Books</a>
+                  <a class="dropdown-item" href="#">Drink</a>
+                  <a class="dropdown-item" href="#">Electronics</a>
+                  <a class="dropdown-item" href="#">Flowers & Plant</a>
+                </div>
+                <div class="dropdown-col"> 
+                  <a class="dropdown-item" href="#">Gadgets</a>
+                  <a class="dropdown-item" href="#">Garden</a>
+                  <a class="dropdown-item" href="#">Grocery</a>
+                  <a class="dropdown-item" href="#">Home</a>
+                  <a class="dropdown-item" href="#">Jewelry</a>
+                  <a class="dropdown-item" href="#">Kids & Baby</a>
+                  <a class="dropdown-item" href="#">Men's Fashion</a>
+                </div>
+                <div class="dropdown-col">
+                  <a class="dropdown-item" href="#">Motorcycles</a>
+                  <a class="dropdown-item" href="#">Movies</a>
+                  <a class="dropdown-item" href="#">Music</a>
+                  <a class="dropdown-item" href="#">Office</a>
+                  <a class="dropdown-item" href="#">Pets</a>
+                  <a class="dropdown-item" href="#">Romantic</a>
+                  <a class="dropdown-item" href="#">Sports</a>
+                </div>
+                <div class="dropdown-col">
+                  <h3>SALES</h3>
+                  <a class="dropdown-item" href="#">Accessories</a>
+                  <a class="dropdown-item" href="#">Alcohol</a>
+                  <a class="dropdown-item" href="#">Art</a>
+                  <a class="dropdown-item" href="#">Books</a>
+                  <a class="dropdown-item" href="#">Drink</a>
+                  <a class="dropdown-item" href="#">Electronics</a>
+                  <a class="dropdown-item" href="#">Flowers & Plant</a>
+                </div>              
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><img src="../midia/search.png"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><img src="../midia/user.png"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><img src="../midia/heart.png"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><img src="../midia/bag.png"></a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--/NAVIGATION BAR-->
+
+    <!--CAROUSEL-->
+    <!--CAROUSEL-->
+
+    <!--FOOTER-->
+    <!--/FOOTER-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="../JavaScript/Script.js"></script>
+  </body>
 </html>
