slider added and some minors corrections

--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!--NAVIGATION BAR-->
-    <nav class="navbar navbar-expand-lg navbar-light ">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <div>
           <a class="navbar-brand" href="#">
@@ -24,7 +24,7 @@
           <ul class="navbar-nav mx-auto">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Features
+                SERVICES
               </a>
               <div class="dropdown-menu dropdown-multicol2 p-3 mb-2" aria-labelledby="dropdownMenuButton">
                 <div class="dropdown-col">
@@ -68,13 +68,13 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="#">COMPANY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">LIBRARY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">CONTACT US</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"><img src="../midia/search.png"></a>
@@ -96,8 +96,51 @@
     <!--/NAVIGATION BAR-->
 
     <!--CAROUSEL-->
+    <div id="carrossel" class="carousel slide container col-lg-8 float-start ms-3" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carrossel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carrossel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carrossel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../midia/carousel_bg.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block text-start">
+            <h1>Lorem ipsum dolor sit amet</h1>
+            <p>Control and manage any device with cloud solutions.</p>
+            <a href="#" class="btn btn-outline-light rounded-pill" role="button">VIEW MORE</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../midia/carousel_bg.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block text-start">
+            <h1>Consectetur adipiscing elit</h1>
+            <p>Control and manage any device with cloud solutions.</p>
+            <a href="#" class="btn btn-outline-light rounded-pill" role="button">VIEW MORE</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../midia/carousel_bg.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block text-start">
+            <h1>Nam non sem sem</h1>
+            <p>Control and manage any device with cloud solutions.</p>
+            <a href="#" class="btn btn-outline-light rounded-pill" role="button">VIEW MORE</a>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carrossel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carrossel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <!--CAROUSEL-->
-
+    <div class="container">
+    <img src="../midia/holiday.png" class="d-none d-lg-block mx-auto" alt="">
+    </div>
     <!--FOOTER-->
     <!--/FOOTER-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
