--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -9,12 +9,13 @@
   </head>
   <body>
     <!--NAVIGATION BAR-->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <div>
           <a class="navbar-brand" href="#">
             <img src="../midia/logo.png" class="d-inline-block">
-            OSF
+            <h1>OSF</h1>
+            </h1>
           </a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +89,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#"><img src="../midia/bag.png"></a>
             </li>
-
           </ul>
         </div>
       </div>
@@ -96,7 +96,7 @@
     <!--/NAVIGATION BAR-->
 
     <!--CAROUSEL-->
-    <div id="carrossel" class="carousel slide container col-lg-8 float-start ms-3" data-bs-ride="carousel">
+    <div id="carrossel" class="carousel slide container col-lg-8 float-start mx-3" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carrossel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carrossel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -137,10 +137,15 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <!--CAROUSEL-->
-    <div class="container">
-    <img src="../midia/holiday.png" class="d-none d-lg-block mx-auto" alt="">
+    <!--/CAROUSEL-->
+    
+    <!--SUMMER SALES-->
+    <div class="container d-none d-xl-block mx-auto">
+    <h1>55%</h1>
+    <h3>SUMMER SALES</h3>
     </div>
+    <!--/SUMMER SALES-->
+    
     <!--FOOTER-->
     <!--/FOOTER-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
