email validation added and password visibility toggle

--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -243,7 +243,7 @@
             <img src="../midia/dragons.png">
           </div>          
         </div>  
-        <div>
+        <div class="py-5">
           <button type="button" class="btn btn-outline-light rounded-pill col-4">LOAD MORE</button>
         </div>
       </div>
@@ -260,14 +260,16 @@
           <div class="modal-body">
             <form>
               <div class="form-group">
-                <label for="Email">Email address</label>
-                <input type="email" class="form-control rounded-pill" id="Email" aria-describedby="email" placeholder="example@mail.com">
-                <small id="passhelp" class="form-text float-end">forgot password</small>
+                <label for="email">Email address</label>
+                <input class="form-control rounded-pill" id="email" placeholder="example@mail.com">
+                <h2 id="passhelp" class="form-text float-end">forgot password</h2>
               </div>
               <div class="form-group">
-                <label for="Password">Password</label>
-                <input type="password" class="form-control rounded-pill" id="Password" placeholder="Min. of 8 characters, 1 capital letter, 1 special character">
-              </div>            
+                <label for="password">Password</label>
+                <input type="password" class="form-control rounded-pill" id="password" placeholder="@*Aaa123">
+                <img id="togglepassword" class="float-end" role="button" src="../midia/visibility.png">
+              </div>
+              <p id="validationcheck"></p>            
             </form>
           </div>
           <div class="modal-footer d-block text-center">
@@ -279,9 +281,12 @@
     </div>
     <!--/MODAL FORM-->
 
+    <img class="" src="../midia/banner.png" style="height: 100%; width: 100%;">
+
     <!--FOOTER-->
     <!--/FOOTER-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="../JavaScript/Script.js"></script>
   </body>
 </html>
