--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <div>
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="home_page.html">
             <img src="../midia/logo.png" class="d-inline-block">
             <h1>OSF</h1>
             </h1>
@@ -24,62 +24,62 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav mx-auto text-center">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="404.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 SERVICES
               </a>
               <div class="dropdown-menu dropdown-multicol2 p-3" aria-labelledby="dropdownMenuButton">
                 <div class="dropdown-col">
                   <h3>PRODUCT CATEGORIES</h3>
-                  <a class="dropdown-item" href="#">Accessories</a>
-                  <a class="dropdown-item" href="#">Alcohol</a>
-                  <a class="dropdown-item" href="#">Art</a>
-                  <a class="dropdown-item" href="#">Books</a>
-                  <a class="dropdown-item" href="#">Drink</a>
-                  <a class="dropdown-item" href="#">Electronics</a>
-                  <a class="dropdown-item" href="#">Flowers & Plant</a>
+                  <a class="dropdown-item" href="404.html">Accessories</a>
+                  <a class="dropdown-item" href="404.html">Alcohol</a>
+                  <a class="dropdown-item" href="404.html">Art</a>
+                  <a class="dropdown-item" href="404.html">Books</a>
+                  <a class="dropdown-item" href="404.html">Drink</a>
+                  <a class="dropdown-item" href="404.html">Electronics</a>
+                  <a class="dropdown-item" href="404.html">Flowers & Plant</a>
                 </div>
                 <div class="dropdown-col"> 
-                  <a class="dropdown-item" href="#">Gadgets</a>
-                  <a class="dropdown-item" href="#">Garden</a>
-                  <a class="dropdown-item" href="#">Grocery</a>
-                  <a class="dropdown-item" href="#">Home</a>
-                  <a class="dropdown-item" href="#">Jewelry</a>
-                  <a class="dropdown-item" href="#">Kids & Baby</a>
-                  <a class="dropdown-item" href="#">Men's Fashion</a>
+                  <a class="dropdown-item" href="404.html">Gadgets</a>
+                  <a class="dropdown-item" href="404.html">Garden</a>
+                  <a class="dropdown-item" href="404.html">Grocery</a>
+                  <a class="dropdown-item" href="404.html">Home</a>
+                  <a class="dropdown-item" href="404.html">Jewelry</a>
+                  <a class="dropdown-item" href="404.html">Kids & Baby</a>
+                  <a class="dropdown-item" href="404.html">Men's Fashion</a>
                 </div>
                 <div class="dropdown-col">
-                  <a class="dropdown-item" href="#">Motorcycles</a>
-                  <a class="dropdown-item" href="#">Movies</a>
-                  <a class="dropdown-item" href="#">Music</a>
-                  <a class="dropdown-item" href="#">Office</a>
-                  <a class="dropdown-item" href="#">Pets</a>
-                  <a class="dropdown-item" href="#">Romantic</a>
-                  <a class="dropdown-item" href="#">Sports</a>
+                  <a class="dropdown-item" href="404.html">Motorcycles</a>
+                  <a class="dropdown-item" href="404.html">Movies</a>
+                  <a class="dropdown-item" href="404.html">Music</a>
+                  <a class="dropdown-item" href="404.html">Office</a>
+                  <a class="dropdown-item" href="404.html">Pets</a>
+                  <a class="dropdown-item" href="404.html">Romantic</a>
+                  <a class="dropdown-item" href="404.html">Sports</a>
                 </div>
                 <div class="dropdown-col">
                   <h3>SALES</h3>
-                  <a class="dropdown-item" href="#">Accessories</a>
-                  <a class="dropdown-item" href="#">Alcohol</a>
-                  <a class="dropdown-item" href="#">Art</a>
-                  <a class="dropdown-item" href="#">Books</a>
-                  <a class="dropdown-item" href="#">Drink</a>
-                  <a class="dropdown-item" href="#">Electronics</a>
-                  <a class="dropdown-item" href="#">Flowers & Plant</a>
+                  <a class="dropdown-item" href="404.html">Accessories</a>
+                  <a class="dropdown-item" href="404.html">Alcohol</a>
+                  <a class="dropdown-item" href="404.html">Art</a>
+                  <a class="dropdown-item" href="404.html">Books</a>
+                  <a class="dropdown-item" href="404.html">Drink</a>
+                  <a class="dropdown-item" href="404.html">Electronics</a>
+                  <a class="dropdown-item" href="404.html">Flowers & Plant</a>
                 </div>            
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">COMPANY</a>
+              <a class="nav-link" href="404.html">COMPANY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">LIBRARY</a>
+              <a class="nav-link" href="404.html">LIBRARY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">CONTACT US</a>
+              <a class="nav-link" href="404.html">CONTACT US</a>
             </li>
             <ul class="nav-bar nav justify-content-center">
               <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../midia/search.png"></a>
+                <a class="nav-link" href="404.html"><img src="../midia/search.png"></a>
               </li>
               <li class="nav-item">              
                 <button type="button" class="btn nav-link" data-bs-toggle="modal" data-bs-target="#login_form">
@@ -87,10 +87,10 @@
                 </button>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../midia/heart.png"></a>
+                <a class="nav-link" href="404.html"><img src="../midia/heart.png"></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../midia/bag.png"></a>
+                <a class="nav-link" href="404.html"><img src="../midia/bag.png"></a>
               </li>
             </ul>
           </ul>
@@ -112,7 +112,7 @@
           <div class="carousel-caption d-none d-md-block text-start">
             <h1>Lorem ipsum dolor sit amet</h1>
             <p>Control and manage any device with cloud solutions.</p>
-            <a href="#" class="btn btn-outline-light rounded-pill" role="button">VIEW MORE</a>
+            <a href="404.html" class="btn btn-outline-light rounded-pill" role="button">VIEW MORE</a>
           </div>
         </div>
         <div class="carousel-item">
@@ -120,7 +120,7 @@
           <div class="carousel-caption d-none d-md-block text-start">
             <h1>Consectetur adipiscing elit</h1>
             <p>Control and manage any device with cloud solutions.</p>
-            <a href="#" class="btn btn-outline-light rounded-pill" role="button">VIEW MORE</a>
+            <a href="404.html" class="btn btn-outline-light rounded-pill" role="button">VIEW MORE</a>
           </div>
         </div>
         <div class="carousel-item">
@@ -128,7 +128,7 @@
           <div class="carousel-caption d-none d-md-block text-start">
             <h1>Mauris mattis dui arcu</h1>
             <p>Control and manage any device with cloud solutions.</p>
-            <a href="#" class="btn btn-outline-light rounded-pill" role="button">VIEW MORE</a>
+            <a href="404.html" class="btn btn-outline-light rounded-pill" role="button">VIEW MORE</a>
           </div>
         </div>
       </div>
@@ -261,7 +261,7 @@
               <div class="form-group">
                 <label for="email">Email address</label>
                 <input class="form-control rounded-pill" id="email" placeholder="example@mail.com">
-                <h2 id="passhelp" class="form-text float-end">forgot password</h2>
+                <h2 class="form-text float-end green">forgot password</h2>
               </div>
 
               <div class="form-group">
@@ -274,7 +274,7 @@
           </div>
           <div class="modal-footer d-block text-center">
             <button id="loggin-btn" type="submit" class="btn rounded-pill col-6">LOGIN</button>
-            <p>I don't have an account</p>
+            <p class="green">I don't have an account</p>
           </div>
         </div>
       </div>
@@ -326,34 +326,34 @@
           </div>
           <div class="col-12 col-lg-2 mx-auto">
             <h6 class="fw-bold">CATEGORIES</h6>
-            <p><a href="#">Alcohol</a></p>
-            <p><a href="#">Art</a></p>
-            <p><a href="#">Books</a></p>
-            <p><a href="#">Drink</a></p>
-            <p><a href="#">Electronics</a></p>
+            <p><a href="404.html">Alcohol</a></p>
+            <p><a href="404.html">Art</a></p>
+            <p><a href="404.html">Books</a></p>
+            <p><a href="404.html">Drink</a></p>
+            <p><a href="404.html">Electronics</a></p>
           </div>
           <div class="col-12 col-lg-2 mx-auto pt-4">
-            <p><a href="#">Home</a></p>
-            <p><a href="#">Jewelry</a></p>
-            <p><a href="#">Kids & Baby</a></p>
-            <p><a href="#">Men's Fashion</a></p>
-            <p><a href="#">Mobile</a></p>
-            <p><a href="#">Motorcycles</a></p>
-            <p><a href="#">Movies</a></p>
-            <p><a href="#">Music</a></p>
+            <p><a href="404.html">Home</a></p>
+            <p><a href="404.html">Jewelry</a></p>
+            <p><a href="404.html">Kids & Baby</a></p>
+            <p><a href="404.html">Men's Fashion</a></p>
+            <p><a href="404.html">Mobile</a></p>
+            <p><a href="404.html">Motorcycles</a></p>
+            <p><a href="404.html">Movies</a></p>
+            <p><a href="404.html">Music</a></p>
           </div>
           <div class="col-12 col-lg-2 mx-auto pt-4">
-            <p><a href="#">Sport</a></p>
-            <p><a href="#">Toys</a></p>
-            <p><a href="#">Travel</a></p>
-            <p><a href="#">Women's Fashion</a></p>
+            <p><a href="404.html">Sport</a></p>
+            <p><a href="404.html">Toys</a></p>
+            <p><a href="404.html">Travel</a></p>
+            <p><a href="404.html">Women's Fashion</a></p>
           </div>
           <div class="col-12 col-lg-2 mx-auto">
             <h6 class="fw-bold">ABOUT</h6>
-            <p><a href="#">About us</a></p>
-            <p><a href="#">Delivery</a></p>
-            <p><a href="#">Testimonials</a></p>
-            <p><a href="#">Contact</a></p>
+            <p><a href="404.html">About us</a></p>
+            <p><a href="404.html">Delivery</a></p>
+            <p><a href="404.html">Testimonials</a></p>
+            <p><a href="404.html">Contact</a></p>
           </div>
           <div class="col-lg-2 mx-auto d-flex justify-content-between">            
             <a href="https://www.facebook.com"><img src="../midia/ff.png"></a>
